# ecom-support-copilot

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  README_HF.md  docker-compose.yml  pyproject.toml  requirements-llm.txt  requirements.txt
.github/workflows/: ci.yml
data/: catalog.json  orders.json  policies.md  tickets.json
supportcopilot/: __init__.py  agent.py  app.py  cli.py  config.py  knowledge.py  metrics.py  orders.py  providers.py  refunds.py  retrieval.py
supportcopilot/static/css/: app.css
supportcopilot/static/js/: app.js
supportcopilot/templates/: _message.html  base.html  dashboard.html  index.html
supportcopilot/templates/partials/: footer.html  nav.html
tests/: conftest.py  test_agent.py  test_app.py  test_metrics.py  test_providers.py  test_refunds.py  test_retrieval.py
