[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "supportcopilot"
version = "0.1.0"
description = "Vertical AI automation for e-commerce customer support, with a provable ROI dashboard."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Laela Zorana" }]
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
    "jinja2>=3.1,<4.0",
    "python-multipart>=0.0.9",
    "scikit-learn>=1.3,<2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
llm = ["anthropic>=0.40", "openai>=1.30"]
dev = ["pytest>=8.0", "httpx>=0.27"]

[project.scripts]
supportcopilot = "supportcopilot.cli:main"

[tool.setuptools.packages.find]
include = ["supportcopilot*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
